# Xcache

./: .gitignore  .gitmodules  README.md  script.sh  virsh.sh
server/: .gitignore  .server.cpp.swp  CCEH.cpp  CCEH_hybrid.cpp  CCEH_hybrid.h  CMakeLists.txt  ICCEH.h  IHash.h  IKV.h  Ikvstore.h  KV.cpp  KV.h  Logger.cpp  Logger.h  Makefile  NuMA_KV.cpp  NuMA_KV.h  README.md  a.sh  bftest.cpp  boost_tcp_server.cpp  circular_queue.cpp  counting_bloom_filter.h  gen_input.cpp  jy  kv_cceh  kv_cuckoo  log.h  log.hpp  malloc.c  memcpy.c  multiQ_server.cpp  queue.cpp  queue.h  rdma.cpp  rdma.h  rdma_svr  rdma_svr.cpp  rdma_svr.h  rdma_svr_mix  (+16 more)
server/cache-replacement/: Makefile  cache.hpp  cache_policy.hpp  fifo_cache_policy.hpp  lfu_cache_policy.hpp  lru_cache_policy.hpp  test.cpp
server/extent/: Makefile  Makefile_backup  bk  extent.cpp_backup  gen.cpp  in1.txt  in11.txt  out.txt  out1.txt  out11.txt
server/hk-src/: CCEH.cpp  test.cpp
server/hotring/: Makefile  README.md  a.out  benchmark.c  error.h  hotring.c  hotring.h  list.h  main.c  test.c  test.h
server/onesided/: Makefile  README.md  rdma_svr
server/rdma_direct/: CCEH_hybrid.cpp  CCEH_hybrid.h  IHash.h  Ikvstore.h  Makefile  NuMA_KV.cpp  NuMA_KV.h  circular_queue.cpp  circular_queue.h  ib.c  rdma_svr  rdma_svr.cpp  rdma_svr.h  rdma_svr.out  rdma_svr_odp  rdma_svr_odp.cpp  table_manager.cpp
server/rdmaserver/: CCEH.cpp  CCEH.h  Makefile  TODO.txt  common.h  cuckoo.c  cuckoo.h  net.cpp  net.h  pmdfc_server  queue.h  server.c  server.h
server/src/: CCEH.cpp  CCEH.h  CCEH_LSB.cpp  CCEH_PM_hybrid.cpp  IHash.h  (+35 more)
(+249 files in other folders)
